2010-12-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/loop.h, libnetworking/net/if_loop.c,
	libnetworking/rtems/rtems_glue.c, libmisc/dummy/dummy-networking.c:
	Initialize loop back interface during normal initialization via
	rtems_bsdnet_initialize_network().

2010-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, posix/src/signal_2.c: sighandler_t is defined
	conditionally in some versions of newlib and unconditionally in
	others. Make sure we always compile.

2010-11-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Revert
	previous commit due to too many broken linker command files.  The
	HAVE_INITFINI_ARRAY is defined for nearly all targets by Newlib, but
	only few linker command files respect this.

2010-11-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Added
	support for .preinit_array, .init_array and .fini_array sections.

2010-11-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h, score/include/rtems/score/scheduler.h,
	score/inline/rtems/score/scheduler.inl,
	score/inline/rtems/score/schedulerpriority.inl,
	score/src/schedulerpriority.c,
	score/src/schedulerprioritythreadschedulerallocate.c,
	score/src/schedulerprioritythreadschedulerfree.c,
	score/src/schedulerprioritythreadschedulerupdate.c,
	score/src/schedulerpriorityyield.c: Added attribute unused.  Renamed
	types and fields to follow the Score naming conventions.

2010-11-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/scheduler.h,
	score/include/rtems/score/schedulerpriority.h: Whitespace removal.
	Moved C++ extern directive.

2010-11-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1711/cpukit
	* score/inline/rtems/score/chain.inl, score/src/chain.c: New functions
	_Chain_Immutable_head(), _Chain_Immutable_tail(),